CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The cupsaddsmb program was updated to use the
	  setdriver command instead of addprinter.
	- Banner pages were not handled properly for implicit
	  classes.
	- When tunneling to a remote system using SSH, the
	  printer URIs for local printers on the remote system
	  did not reflect the correct port number.
	- The Allow, Deny, BrowseAllow, BrowseDeny, and
	  BrowseAddress directives now support the network
	  interface names "@LOCAL" and "@IF(name)" for access
	  control and browsing based on the current interface
	  addresses instead of fixed names or IP addresses.
	- The texttops filter did not properly recognize the
	  "nowrap" (wrap=false) option.
	- The InstallableOptions group name in a PPD file is now
	  translated separately (CUPS_MSG_OPTIONS_INSTALLED) so
	  that UIs can accurately detect the presence of this
	  group.
	- The scheduler no longer keeps job history data for
	  remote printers on the client (just on the server.)
	- The parallel and USB backends now retry if the backend
	  detects that the printer is not connected to the
	  system (rather than stopping the queue...)
	- The network backends now retry if the backend detects
	  that the printer is not connected to the network or is
	  unreachable (rather than stopping the queue...)
	- The cupsGetDests() function no longer lists options
	  and instances for printers that no longer exist.
	- The scheduler now converts the document language to
	  the correct LANG string.
	- The cupsaddsmb program now supports alternative CUPS
	  and SAMBA server names.
	- The PostScript filter now supports the Orientation
	  comment and rotates the page as needed automatically.
	- Revamped the makefiles slightly to use automatically
	  generated dependencies.
	- Build fixes for OS X.
	- The TIFF reading code depended on the newest version